set input boxes in the management window to full width; try to fix the width of tooltips on IE
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@17402 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/_dev_/annotations/css/jqModal.css
+++ b/_dev_/annotations/css/jqModal.css
@@ -66,7 +66,7 @@ a.annotate_action_change span,a.annotate_action_delete span {position:absolute;t
 
 #annotate_image_summary {width:200px;margin:auto}
 
-
+#annotate_wizard3 input,#annotate_wizard3 textarea {width:100%}
 
 #annotate_csv_panel_container {overflow:auto;padding:1px}
 #annotate_csv_panel{width:100%;border:#000 1px solid;font-size:10px;}
